infra/k3s/k8s-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fans
  labels:
    name: fans
    environment: production
