infra/k3s/k8s-manifests/40-crawler-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-crawler
  namespace: fans
  labels:
    app: api-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-crawler
  template:
    metadata:
      labels:
        app: api-crawler
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: api-crawler
        image: hodduk/k3s-fans-api-crawler:latest
        ports:
        - containerPort: 4003
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: api-crawler-service
  namespace: fans
spec:
  selector:
    app: api-crawler
  ports:
  - port: 4003
    targetPort: 4003
    protocol: TCP
  type: ClusterIP
